public/style.css
body {
    margin: 0 auto;
    max-width: 38em;
    font-family: "Inconsolata", "Helvetica", "Arial", sans-serif;
    line-height: 1.5;
    padding: 4em 1em;
    color: rgb(55, 53, 48);
    background-color: #faf7f1;
}

h1 {
    line-height: 1;
}

h1 img {
    vertical-align: middle;
}

h1,
h2,
strong {
    color: #333;
}

h2 {
    margin-top: 1em;
}

.contact strong {
    display: inline-block;
    width: 10em;
}

a {
    color: #992525;
}

em {
    font-style: normal;
    font-weight: bold;
    color: #992525;
}

textarea {
    width: 100%;
    height: 10em;
}

@media only screen and (max-width: 430px) {
    strong {
        display: block;
        width: auto;
    }
}

.form-message {
    display: inline-block;
    margin-left: 0.5em;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1em;
    margin-bottom: 2em;
}

